CHANGELOG
=========
+-----------------------+
| VERSION: 0.5.1        |
+-----------------------+
BUGFIXES
12-10-05    Fixed error where pages without a section id assumed html title "none"

IMPROVEMENTS
12-10-05    Added 74 web tests to ensure error-free screen rendering
06-10-05    Articles can now be set to never expire (Eric Persson)
28-09-05    Implemented default manager invocation when url params get garbled
27-09-05    Added SGL::setNoticeBehaviour() method

+-----------------------+
| VERSION: 0.5.0        |
+-----------------------+
BUGFIXES
19-09-05    Fixed dynamic block implementation to work with FCK

IMPROVEMENTS
20-09-05    Removed extended session tests, functionality implemented by default
07-09-05    Refactored Category functionality into SGL_Category (Aymerick Jehanne)
30-08-05    Modified category.perms field to take 32 chars (Tobias Kuckuck)
28-08-05    Blocks can now be stored in the DB and updated with GUI (uprooter)
10-07-05    Implemented accessibility enhancements for navigation (Michael Heuberger)
10-07-05    Big naming cleanup in CSS as per RFC (Riccardo Magliocchetti)

+-----------------------+
| VERSION: 0.4.7        |
+-----------------------+
BUGFIXES
16-09-05    Fixed a nasty bug where requesting an article ID that didn't exist caused
            an infinite Flexy loop
15-09-05    Html title element value is now correctly drawn from the current article 
            title, or the section name if none exists

IMPROVEMENTS
14-09-05    Unit test runner added, currently works with pear-installable version of
            SimpleTest, many thanks to m3 Media Services Limited for granting us the
            right to distribute this under BSD (http://www.m3.net/)

+-----------------------+
| VERSION: 0.4.6        |
+-----------------------+
BUGFIXES
14-09-05    Fixed missing bug icon in msie
14-09-05    Fixed bug where new sequences for pgsql were correctly created but existing 