@@ -83,8 +83,8 @@ class RecentHtmlArticles
                 WHERE   ia.item_type_mapping_id = itm.item_type_mapping_id
                 AND     it.item_type_id  = itm.item_type_id
                 AND     i.item_id = ia.item_id
-                AND     i.start_date < '" . SGL::getTime() . "'
-                AND     i.expiry_date  > '" . SGL::getTime() . "'
+                AND     i.start_date < '" . SGL_Date::getTime() . "'
+                AND     i.expiry_date  > '" . SGL_Date::getTime() . "'
                 AND     itm.field_name = 'title'
                 AND     it.item_type_id  = 2
                 AND     i.status  = " . SGL_STATUS_PUBLISHED . "
